# Copyright (C) 2010  Martin Lambers <marlam@marlam.de>
#
# Copying and distribution of this file, with or without modification, are
# permitted in any medium without royalty provided the copyright notice and this
# notice are preserved. This file is offered as-is, without any warranty.

noinst_LTLIBRARIES = libbase.la
libbase_la_SOURCES = \
	str.h str.cpp \
	msg.h msg.cpp \
	debug.h debug.cpp \
	exc.h exc.cpp \
	intcheck.h \
	cio.h cio.cpp \
	opt.h opt.cpp \
	endianness.h \
	blob.h
AM_CPPFLAGS = -I$(top_srcdir)/gnulib -I$(top_srcdir)/base
