# Copyright (C) 2010, 2011, 2013
# Martin Lambers <marlam@marlam.de>
#
# Copying and distribution of this file, with or without modification, are
# permitted in any medium without royalty provided the copyright notice and this
# notice are preserved. This file is offered as-is, without any warranty.

noinst_LTLIBRARIES = libbase.la
libbase_la_SOURCES = \
	str.h str.cpp \
	msg.h msg.cpp \
	dbg.h dbg.cpp \
	exc.h exc.cpp \
	intcheck.h \
	fio.h fio.cpp \
	opt.h opt.cpp \
	endianness.h \
	blob.h \
	gettext.h
libbase_la_LDFLAGS = -static
