# Copyright (C) 2010, 2011, 2013
# Martin Lambers <marlam@marlam.de>
#
# Copying and distribution of this file, with or without modification, are
# permitted in any medium without royalty provided the copyright notice and this
# notice are preserved. This file is offered as-is, without any warranty.

noinst_LTLIBRARIES = libbase.la
libbase_la_SOURCES = \
	blb.h \
	chk.h \
	dbg.h dbg.cpp \
	end.h \
	exc.h exc.cpp \
	fio.h fio.cpp \
	msg.h msg.cpp \
	opt.h opt.cpp \
	str.h str.cpp \
	gettext.h
libbase_la_LDFLAGS = -static
